# email-normalize

./: .checkignore  .codeclimate.yml  .editorconfig  .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.rst  email_normalize.py  setup.cfg  setup.py  test-requirements.txt  tests.py
.github/workflows/: deploy.yaml  testing.yaml
docs/: conf.py  history.rst  index.rst  mxrecords.rst  normalize.rst  normalizer.rst  requirements.txt  result.rst
docs/_static/css/: custom.css
email_normalize/: __init__.py  __version__.py  providers.py
tests/: test_normalize.py  test_normalizer.py
