[metadata]
name = email-normalize
version = file: VERSION
description = Return a normalized email-address stripping ISP specific behaviors
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = BSD 3-Clause License
license-file = LICENSE
home-page = https://github.com/gmr/email-normalize
project_urls =
    Bug Tracker = https://github.com/gmr/email-normalize/issues
    Documentation = https://email-normalize.readthedocs.io
    Source Code = https://github.com/gmr/email-normalize/
author = Gavin M. Roy
author_email = gavinmroy@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Communications
    Topic :: Internet
    Topic :: Software Development
    Typing :: Typed
requires-dist = setuptools
keywords =
    email

[options]
include_package_data = True
install_requires =
    aiodns
packages =
    email_normalize
zip_safe = true

[options.extras_require]
testing =
    coverage
    flake8
    flake8-comprehensions
    flake8-deprecated
    flake8-import-order
    flake8-print
    flake8-quotes
    flake8-rst-docstrings
    flake8-tuple
    mypy
    pygments

[coverage:run]
branch = True
command_line = -m unittest discover tests --verbose
data_file = build/.coverage

[coverage:report]
show_missing = True
include =
    email_normalize/*
omit =
    tests/*.py

[coverage:html]
directory = build/coverage

[coverage:xml]
output = build/coverage.xml

[flake8]
application-import-names = email_normalize, tests
exclude = build,docs,env
ignore = RST306,RST399,W503
import-order-style = pycharm
rst-directives = seealso
rst-roles = attr,class,const,data,exc,func,meth,mod,obj,ref,yields
